Bug 156577 - SVG: incorrect text position when tspan inside text
Summary: SVG: incorrect text position when tspan inside text
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bibisected, bisected, filter:svg, regression
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-08-02 09:33 UTC by Xisco Faulí
Modified: 2023-08-03 16:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (317 bytes, image/svg+xml)
2023-08-02 09:33 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-08-02 09:33:53 UTC
Created attachment 188715 [details]
sample file

Steps to reproduce:
1. Open attached document and compare

-> There is a separation betwen the first and the second character

Reproduced in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 90189fb8a8786cc683ff88f04eb3d764cc46e32a
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2023-08-02 09:34:48 UTC
regression introduced by ac8fd70e4e23d12857f766a4918747bbc5a7cb9b
Comment 2 Commit Notification 2023-08-02 18:07:59 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/79646e204f5d558f5519186cb62ef1c9254f857f

tdf#156577: do no use parent position if x array is empty

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 stragu 2023-08-03 09:54:21 UTC
Verified the fix in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eef0c5d4d45ba35acfb6d8f7551fe565ca4badaa
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thanks!

One issue with this example file is that breaking the object results in tiny subsets, but that was also the case in 7.5.
Comment 4 Commit Notification 2023-08-03 16:39:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/d3a8c3d5a6db298d427999b84a474c982c26e6dd

tdf#156577: do no use parent position if x array is empty

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.