tdf#156577: do no use parent position if x array is empty

Change-Id: Id29e5a440dbc3719c53bcc9226336a3c99d469e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155216
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 79646e204f5d558f5519186cb62ef1c9254f857f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155248